--- a/frontend/style.css
+++ b/frontend/style.css
@@ -54,6 +54,10 @@ nav a:hover {
   margin-top: 90px; /* knappen skjuts ner i flödet */
   
 }
+#btn3 {
+  margin-top: 100px; /* knappen skjuts ner i flödet */
+  
+}
 button {
   background: darkgreen;
   color: white;
