--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,7 +1,7 @@
 body { 
   font-family: Arial, sans-serif; 
   margin: 0; 
-  background: #f7f7f7; 
+  background: #fefefa; 
 }
 header { 
   background:
@@ -51,11 +51,11 @@ nav a:hover {
 }
 
 #btn2 {
-  margin-top: 90px; /* knappen skjuts ner i flödet */
+  margin-top: 90px; 
   
 }
 #btn3 {
-  margin-top: 100px; /* knappen skjuts ner i flödet */
+  margin-top: 100px; 
   
 }
 button {
